Massive amount of work to move to AngularJS.

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
       "angular-route" : "latest",
       "restangular" : "latest",
       "angular-relative-date" : "latest",
-      "ng-form-data" : "latest"
+      "ng-form-data" : "latest",
+      "angular-growl-v2" : "latest",
+      "angular-animate" : "latest"
     }
   },
   "vendor": {
