--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 # Instance-specific configuration.
 config/database.yml
 config/initializers/devise.rb
+config/initializers/smtp.rb
 
 # Ignore all logfiles and tempfiles.
 /log
