Test case development.

--- a/test/fixtures/torrents.yml
+++ b/test/fixtures/torrents.yml
@@ -1,5 +1,14 @@
 1MiB:
   name: 1MiB of Random Data
-  data: !!binary "<%= Base64.encode64 File.read(File.join(Rails.root, 'test', 'fixtures', '1MiB.torrent')) %>"
+  user: :admin
+  feed: :public
+  data: !!binary "<%= Base64.encode64(File.read(File.join(Rails.root, 'test', 'fixtures', '1MiB.torrent'))) %>"
   info_hash: e0136c8c4e875f5089963591029bc6540bf16b59
+
+10MiB:
+  name: 10MiB of Random Data
+  user: :admin
+  feed: :private
+  data: !!binary "<%= Base64.encode64(File.read(File.join(Rails.root, 'test', 'fixtures', '10MiB.torrent'))) %>"
+  info_hash: 17c22e881d2abdcc56a35f8c619fe254be6b1a92
 
