--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 /db/*.sqlite3
 
 # Instance-specific configuration.
-#config/database.yml
+config/database.yml
 config/initializers/devise.rb
 config/initializers/smtp.rb
 
