Volunteer client development.

--- a/volunteer/settings.json
+++ b/volunteer/settings.json
@@ -1,6 +1,25 @@
 {
     "url": "https://try.bittorious.com",
     "enabled": true,
-    "disk_maximum_gigabytes": 5,
-    "authentication_token": ""
+    "disk_maximum_gigabytes": 3,
+    "authentication_token": "",
+    "feed": {
+        "id": 6,
+        "name": "DinuLab",
+        "slug": "dinulab",
+        "description": "A feed for open access data published by the Dinu lab in the College of Health Solutions at Arizona State University. Contact preston@asu.edu for access.",
+        "user_id": 18,
+        "created_at": "2014-12-24T02:39:21.218Z",
+        "updated_at": "2014-12-29T16:58:27.496Z",
+        "enable_public_archiving": true,
+        "replication_percentage": 20,
+        "can_update": false,
+        "can_delete": false,
+        "torrents": [
+            {
+                "id": 20,
+                "name": "Welcome"
+            }
+        ]
+    }
 }
