Affinity fixes for volunteer peer registration.

--- a/affinity/Makefile
+++ b/affinity/Makefile
@@ -1,5 +1,5 @@
 all: 
-	g++ affinity.cpp torrent.cpp -o affinity
+	g++ affinity.cpp torrent.cpp -lcrypto -Wno-deprecated-declarations -o affinity
 
 clean:
 	rm affinity
